# Test-Agent

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: integrate-claude-cli.md
docs/: PLAN_V1.md  PLAN_V2.md  PLAN_V3.md  claude-cli-integration.md
profiles/: example_gemini.yaml  example_project.yaml  vue_project.yaml
scripts/: cache_db_schema.py
skills/run-log/: SKILL.md
skills/token-usage/: SKILL.md
src/universal_debug_agent/: __init__.py  __main__.py  config.py  main.py
src/universal_debug_agent/agents/: brain.py  db_agent.py  prompts.py
src/universal_debug_agent/generators/: action_log.py  codegen.py  selector_resolver.py
src/universal_debug_agent/mcp/: factory.py
src/universal_debug_agent/memory/: store.py
src/universal_debug_agent/models/: factory.py
src/universal_debug_agent/observability/: llm_usage.py  trace_recorder.py
src/universal_debug_agent/orchestrator/: claude_executor.py  hooks.py  input_filters.py  state_machine.py
src/universal_debug_agent/schemas/: profile.py  report.py
src/universal_debug_agent/tools/: auth_tools.py  code_tools.py  db_tool.py  report_tool.py
tests/: test_auth_tools.py  test_code_tools.py  test_codegen.py  test_config.py  test_db_tool.py  test_hooks.py  test_input_filters.py  test_llm_usage.py  test_main.py  test_memory.py  test_models.py  test_schemas.py  test_state_machine.py
